added reactive js

--- a/index.html
+++ b/index.html
@@ -8,48 +8,48 @@
         <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="vertical flex">
-            <div class="top-bar fav-container">
-                <span class="material-symbols-outlined like">favorite</span>
+        <div>
+            <div class="top-bar">
+                <div class="wishlist"></div>
             </div>
             <div class="heading">
                 <h1>Itemlist</h1>
             </div>
-            <div class="horizontal-flex">
-                <p>Mac</p>
-                <span class="material-symbols-outlined">favorite</span>
+            <div class="horizontal-flex" id="item">
+                <a><p>Mac</p></a>
+                <a><span class="material-symbols-outlined like" id="1">favorite</span></a>
             </div>
-            <div class="horizontal-flex">
-                <p>iPhone</p>
-                <span class="material-symbols-outlined">favorite</span>
+            <div class="horizontal-flex" id="item">
+                <a><p>iPhone</p></a>
+                <a><span class="material-symbols-outlined like" id="2">favorite</span></a>
             </div>
-            <div class="horizontal-flex">
-                <p>iPad</p>
-                <span class="material-symbols-outlined">favorite</span>
+            <div class="horizontal-flex" id="item">
+                <a><p>iPad</p></a>
+                <a><span class="material-symbols-outlined like" id="3">favorite</span></a>
             </div>
-            <div class="horizontal-flex">
-                <p>appleWatch</p>
-                <span class="material-symbols-outlined">favorite</span>
+            <div class="horizontal-flex" id="item">
+                <a><p>appleWatch</p></a>
+                <a><span class="material-symbols-outlined like" id="4">favorite</span></a>
             </div>
-            <div class="horizontal-flex">
-                <p>Airpods</p>
-                <span class="material-symbols-outlined">favorite</span>
+            <div class="horizontal-flex" id="item">
+                <a><p>Airpods</p></a>
+                <a><span class="material-symbols-outlined like" id="5">favorite</span></a>
             </div>
-            <div class="horizontal-flex">
-                <p>AirTag</p>
-                <span class="material-symbols-outlined">favorite</span>
+            <div class="horizontal-flex" id="item">
+                <a><p>AirTag</p></a>
+                <a><span class="material-symbols-outlined like" id="6">favorite</span></a>
             </div>
-            <div class="horizontal-flex">
-                <p>HomePod</p>
-                <span class="material-symbols-outlined">favorite</span>
+            <div class="horizontal-flex" id="item">
+                <a><p>HomePod</p></a>
+                <a><span class="material-symbols-outlined like" id="7">favorite</span></a>
             </div>
-            <div class="horizontal-flex">
-                <p>TV4K</p>
-                <span class="material-symbols-outlined">favorite</span>
+            <div class="horizontal-flex" id="item">
+                <a><p>TV4K</p></a>
+                <a><span class="material-symbols-outlined like" id="8">favorite</span></a>
             </div>
-            <div class="horizontal-flex">
-                <p>Accessories</p>
-                <span class="material-symbols-outlined">favorite</span>
+            <div class="horizontal-flex" id="item">
+                <a><p>Accessories</p></a>
+                <a><span class="material-symbols-outlined">favorite</span></a>
             </div>
         </div>
         <script src="index.js"></script>
