--- a/index.html
+++ b/index.html
@@ -15,41 +15,8 @@
             <div class="heading">
                 <h1>Itemlist</h1>
             </div>
-            <div class="horizontal-flex" id="item">
-                <a><p>Mac</p></a>
-                <a><span class="material-symbols-outlined like" id="1">favorite</span></a>
-            </div>
-            <div class="horizontal-flex" id="item">
-                <a><p>iPhone</p></a>
-                <a><span class="material-symbols-outlined like" id="2">favorite</span></a>
-            </div>
-            <div class="horizontal-flex" id="item">
-                <a><p>iPad</p></a>
-                <a><span class="material-symbols-outlined like" id="3">favorite</span></a>
-            </div>
-            <div class="horizontal-flex" id="item">
-                <a><p>appleWatch</p></a>
-                <a><span class="material-symbols-outlined like" id="4">favorite</span></a>
-            </div>
-            <div class="horizontal-flex" id="item">
-                <a><p>Airpods</p></a>
-                <a><span class="material-symbols-outlined like" id="5">favorite</span></a>
-            </div>
-            <div class="horizontal-flex" id="item">
-                <a><p>AirTag</p></a>
-                <a><span class="material-symbols-outlined like" id="6">favorite</span></a>
-            </div>
-            <div class="horizontal-flex" id="item">
-                <a><p>HomePod</p></a>
-                <a><span class="material-symbols-outlined like" id="7">favorite</span></a>
-            </div>
-            <div class="horizontal-flex" id="item">
-                <a><p>TV4K</p></a>
-                <a><span class="material-symbols-outlined like" id="8">favorite</span></a>
-            </div>
-            <div class="horizontal-flex" id="item">
-                <a><p>Accessories</p></a>
-                <a><span class="material-symbols-outlined">favorite</span></a>
+            <div class="item-list">
+           
             </div>
         </div>
         <script src="index.js"></script>
