--- a/index.html
+++ b/index.html
@@ -10,12 +10,9 @@
     <body>
         <div>
             <div class="top-bar">
-                <div class="wishlist"></div>
+                <span class="material-symbols-outlined fav">favorite</span>
             </div>
-            <div class="heading">
-                <h1>Itemlist</h1>
-            </div>
-            <div class="item-list">
+            <div class="item-container">
            
             </div>
         </div>
