--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <div class="top-bar">
                 <span class="material-symbols-outlined fav">favorite</span>
             </div>
-           
-           
+            <div class="item-super-container">
+
             </div>
         </div>
         <script src="index.js"></script>
