added number of items in wishlist

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div>
             <div class="top-bar">
                 <span class="material-symbols-outlined fav">favorite</span>
+                <p class="fav-item-number"></p>
             </div>
             <div class="item-super-container">
 
